--- a/app/src/main/res/layout/news_list_card.xml
+++ b/app/src/main/res/layout/news_list_card.xml
@@ -67,18 +67,37 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:layout_marginHorizontal="10dp">
-            <TextView
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/item_date_time"
-                android:textColor="@color/keywordColor"
-                android:height="40dp"
-                android:minWidth="90dp"
-                android:textSize="12sp"
-                android:gravity="center"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="5dp"
-                />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/item_date_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:height="40dp"
+                    android:gravity="center"
+                    android:minWidth="90dp"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="5dp"
+                    android:textColor="@color/keywordColor"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/source_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:height="40dp"
+                    android:gravity="center"
+                    android:minWidth="90dp"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="5dp"
+                    android:textColor="@color/keywordColor"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
