--- a/app/src/main/res/layout/expert_card.xml
+++ b/app/src/main/res/layout/expert_card.xml
@@ -17,21 +17,21 @@
         android:orientation="horizontal">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="3dp"
             android:layout_marginVertical="3dp">
 
             <ImageView
                 android:id="@+id/expert_image"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="2dp"
                 android:adjustViewBounds="true"
                 android:background="@color/transparent"
                 android:contentDescription="@string/imageview_placeholder"
-                android:maxWidth="100dp" />
+                android:scaleType="fitXY"/>
         </RelativeLayout>
 
         <LinearLayout
