--- a/app/src/main/res/layout/news_list_card.xml
+++ b/app/src/main/res/layout/news_list_card.xml
@@ -52,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="1dp"
+                android:layout_marginTop="2dp"
                 android:textColor="@color/abstractItemUnselColor"
                 android:textSize="15sp"/>
 
