--- a/app/src/main/res/layout/entity_card.xml
+++ b/app/src/main/res/layout/entity_card.xml
@@ -28,10 +28,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:text="TextView"
                 android:textSize="25sp"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:textColor="@android:color/black"/>
 
             <ImageButton
@@ -68,44 +69,36 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/DEFINITION"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
+                            android:text="定义"
+                            android:textSize="17sp" />
 
-                            <TextView
-                                android:id="@+id/DEFINITION"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="定义"
-                                android:textSize="17sp"
-                                android:textColor="@android:color/black"/>
-
-                            <TextView
-                                android:id="@+id/definition_text"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@android:color/darker_gray"
-                                android:textSize="15sp" />
-                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/definition_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/darker_gray"
+                            android:textSize="15sp" />
 
                         <RelativeLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="300dp"
                             android:layout_height="wrap_content">
 
                             <ImageView
                                 android:id="@+id/imgEntity"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical|center_horizontal"
                                 android:layout_marginTop="2dp"
                                 android:adjustViewBounds="true"
-                                android:contentDescription="@string/imageview_placeholder"
                                 android:background="@color/transparent"
-                                android:maxHeight="150dp" />
+                                android:contentDescription="@string/imageview_placeholder"
+                                android:scaleType="fitXY"/>
 
                         </RelativeLayout>
 
