--- a/app/src/main/res/layout/entity_first_child_card.xml
+++ b/app/src/main/res/layout/entity_first_child_card.xml
@@ -17,41 +17,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/DEFINITION"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:text="定义"
+                android:textSize="17sp" />
 
-                <TextView
-                    android:id="@+id/DEFINITION"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:text="定义" />
-
-                <TextView
-                    android:id="@+id/definition_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@android:color/darker_gray"/>
-            </LinearLayout>
+            <TextView
+                android:id="@+id/definition_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="15sp" />
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/imgEntity"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_marginTop="2dp"
                     android:adjustViewBounds="true"
+                    android:background="@color/transparent"
                     android:contentDescription="@string/imageview_placeholder"
-                    android:maxHeight="300dp" />
+                    android:scaleType="fitXY"/>
 
             </RelativeLayout>
 
