--- a/app/src/main/res/layout/activity_detail_expert.xml
+++ b/app/src/main/res/layout/activity_detail_expert.xml
@@ -144,18 +144,23 @@
                     android:id="@+id/BIO"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
                     android:text="简介" />
 
                 <View
                     android:id="@+id/imageView3"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginHorizontal="2dp"
                     android:background="@android:color/darker_gray"/>
 
                 <TextView
                     android:id="@+id/bio_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
                     android:textSize="13dp"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -180,6 +185,8 @@
                     android:id="@+id/EDU"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
                     android:text="教育背景"
                     android:textSize="16dp"/>
 
@@ -187,12 +194,15 @@
                     android:id="@+id/imageView4"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginHorizontal="2dp"
                     android:background="@android:color/darker_gray"/>
 
                 <TextView
                     android:id="@+id/edu_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
                     android:textSize="13dp"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -217,18 +227,23 @@
                     android:id="@+id/WORK"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
                     android:text="工作经历" />
 
                 <View
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginHorizontal="2dp"
                     android:background="@android:color/darker_gray"/>
 
                 <TextView
                     android:id="@+id/work_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
                     android:textSize="13dp"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
